[gd_scene load_steps=9 format=3 uid="uid://phoxfhoi5d6q"]

[ext_resource type="Script" path="res://scripts/ui/inventory.gd" id="1_2s6c5"]
[ext_resource type="Texture2D" uid="uid://bpg6kvg0h215n" path="res://assets/ui/menu_back.png" id="2_tjkt3"]
[ext_resource type="Theme" uid="uid://cuud6f4ghv7bq" path="res://themes/ui/button_inventory_style.tres" id="3_1krke"]
[ext_resource type="Theme" uid="uid://d0cj3ba0otxfs" path="res://themes/ui/button_inventory_style_font_30.tres" id="3_lqxno"]
[ext_resource type="Texture2D" uid="uid://b4ng0jvqns8ff" path="res://assets/ui/menu_back_64.png" id="5_eol0x"]
[ext_resource type="PackedScene" uid="uid://b41ybpiw7q5sb" path="res://scenes/inventory_item.tscn" id="5_k1h16"]
[ext_resource type="Texture2D" uid="uid://dsyll8kbxtqnh" path="res://assets/armors/leather.png" id="5_w8bcs"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_2j1c0"]

[node name="Inventory" type="Control"]
process_mode = 3
material = SubResource("CanvasItemMaterial_2j1c0")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_2s6c5")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 700)
layout_mode = 0

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_tjkt3")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 90
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 90
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TypeChoice" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_1krke")
theme_override_constants/separation = 100

[node name="Weapons" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TypeChoice"]
texture_filter = 1
layout_mode = 2
text = "Weapons
"

[node name="Armors" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TypeChoice"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Armors
"

[node name="Utils" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TypeChoice"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Utils
"

[node name="Exit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TypeChoice"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 60
text = "X"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemsList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_lqxno")
theme_override_constants/separation = 25

[node name="InventoryItem" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/ItemsList" instance=ExtResource("5_k1h16")]
layout_mode = 2

[node name="ItemDetailsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ColorRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer"]
texture_filter = 1
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("5_eol0x")

[node name="ColorRect" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.152941)

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer/ColorRect/ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_w8bcs")

[node name="ItemDetails" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30

[node name="ItemActionButtons" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="EquipButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer/ItemActionButtons"]
texture_filter = 1
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("3_lqxno")
theme_override_font_sizes/font_size = 30
text = "Equip"

[node name="UseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer/ItemActionButtons"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("3_lqxno")
theme_override_font_sizes/font_size = 30
text = "Use"

[node name="DeleteButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer/ItemActionButtons"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("3_lqxno")
theme_override_font_sizes/font_size = 30
text = "Delete"

[node name="SellButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer/ItemActionButtons"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("3_lqxno")
theme_override_font_sizes/font_size = 30
text = "Sell
"

[node name="ConfirmPanel" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 60
alignment = 1

[node name="Confirm_button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer/ConfirmPanel"]
layout_mode = 2
theme = ExtResource("3_lqxno")
text = "Confirm"

[node name="Cancel_button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer/ConfirmPanel"]
layout_mode = 2
theme = ExtResource("3_lqxno")
text = "Cancel
"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 300

[node name="Gold" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "100g"

[node name="Weight" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "100/100 kg"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TypeChoice/Weapons" to="." method="handle_weapons_category_click"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TypeChoice/Armors" to="." method="handle_armors_category_click"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TypeChoice/Utils" to="." method="handle_utils_category_click"]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/TypeChoice/Exit" to="." method="_on_exit_button_down"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer/ItemActionButtons/EquipButton" to="." method="_on_equip_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer/ItemActionButtons/UseButton" to="." method="handle_use_item_button_click"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer/ItemActionButtons/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer/ItemActionButtons/SellButton" to="." method="handle_sell_item_button_click"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer/ConfirmPanel/Confirm_button" to="." method="confirm_action"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer/ConfirmPanel/Confirm_button" to="." method="sell_delete_confirm_action"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ItemDetailsContainer/ConfirmPanel/Cancel_button" to="." method="cancel_action"]
